Update README with deployment guide (Docker + systemd) (#14)
* ci: remove unreliable npm owasp-dependency-check from CI

The owasp-dependency-check npm package downloads an external binary
at runtime and fails when the GitHub API rate-limits or changes the
release asset format. Frontend vulnerabilities are already covered
by npm audit (0 vulnerabilities). Backend dependency check via
Gradle OWASP plugin remains unchanged.

* Update README with deployment guide (Docker + systemd)

Replace the existing README with a comprehensive deployment guide
covering Docker (recommended) and native systemd installation,
JVM flags, and Apache HTTPD reverse proxy configuration
(virtual host and path-based).

---------

Co-authored-by: Giuseppe <giuseppe.nespolino@innovaway.it>